--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Vyorius Test Assingment</string>
+    <?xml version="1.0" encoding="utf-8"?>
+    <resources xmlns:tools="http://schemas.android.com/tools">
+        <string name="mapbox_access_token" translatable="false" tools:ignore="UnusedResources">sk.eyJ1IjoiZGVlcHN5bm8iLCJhIjoiY2x0cGVnMTJyMGhhaTJubWhqbzZ0M29laiJ9.XsmJFn_rckzePdSD9_iPWQ</string>
+    </resources>
 </resources>
