--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
-    <string name="app_name">Vyorius Test Assingment</string>
-    <?xml version="1.0" encoding="utf-8"?>
-    <resources xmlns:tools="http://schemas.android.com/tools">
-        <string name="mapbox_access_token" translatable="false" tools:ignore="UnusedResources">sk.eyJ1IjoiZGVlcHN5bm8iLCJhIjoiY2x0cGVnMTJyMGhhaTJubWhqbzZ0M29laiJ9.XsmJFn_rckzePdSD9_iPWQ</string>
-    </resources>
+    <string name="app_name" translatable="false">Vyorius Test Assingment</string>
+
+        <string name="mapbox_access_token" >sk.eyJ1IjoiZGVlcHN5bm8iLCJhIjoiY2x0cGVnMTJyMGhhaTJubWhqbzZ0M29laiJ9.XsmJFn_rckzePdSD9_iPWQ</string>
+
 </resources>
