--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,7 @@
     <string name="app_name" translatable="false">Vyorius Test Assingment</string>
 
         <string name="mapbox_access_token" >sk.eyJ1IjoiZGVlcHN5bm8iLCJhIjoiY2x0cGVnMTJyMGhhaTJubWhqbzZ0M29laiJ9.XsmJFn_rckzePdSD9_iPWQ</string>
+    <string name="mapAddbtn" />
+    <string name="MapAddBtn">add maps\n</string>
 
 </resources>
